# TPCISedRa

./: INSTALL.md  README.md
Doc/: .gitignore
Doc/LatexTP/: Makefile  README.md  TPCI_SEDRAInria.tex
Doc/SlidesLatex2014/: Makefile  presentation_ci_eng.tex
Doc/SlidesLatex2014/images/graphviz_files/: Makefile  fit_architecture.dot
Doc/SlidesLatex2014/inria-doc-style/: beamerinnerthemeinria.sty  beamerouterthemeinria.sty  inria.sty
Doc/TemplateLatexTP/: .gitignore  Sphere.java  templateTP.tex
Src/Cxx/src/step0/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp
Src/Cxx/src/step0/tests/: CMakeLists.txt  TestTP.cpp  TestTP.hpp
Src/Cxx/src/step1/: CMakeLists.txt  HelloWorld.hpp  Sphere.cpp  bench.cpp
Src/Cxx/src/step1/tests/: CMakeLists.txt  TestTP.cpp  TestTP.hpp
Src/Cxx/src/step2/: CMakeLists.txt  HelloWorld.cpp  Sphere.cpp  Sphere.hpp
Src/Cxx/src/step2/tests/: TestTP.cpp  TestTP.hpp  testMain.cpp
Src/Cxx/src/step3/: Alphabet.cpp  Alphabet.hpp  CMakeLists.txt  Sphere.cpp  Sphere.hpp
Src/Cxx/src/step3/tests/: CMakeLists.txt  TestTP.cpp  TestTP.hpp  testMain.cpp
Src/Cxx/src/step4/: Alphabet.cpp  Alphabet.hpp  CMakeLists.txt  Sphere.cpp  Sphere.hpp
Src/Cxx/src/step4/tests/: CMakeLists.txt  TestTP.cpp  TestTP.hpp
Src/Java/: pom.xml
Src/Java/src/fr/inria/sed/icjava/: Alphabet.java  Main.java  Sphere.java
Src/Java/test/fr/inria/sed/icjava/: AlphabetTest.java  AlphabetTest2.java  SphereTest.java
Src/Python/: CI.md  README.md  setup.cfg  setup.py  sphere  tox.ini
Src/Python/tests_utils/: pylint-python-2.6_3.2.txt  test-requirements.txt
Src/Python/tp_ci_sed/: __init__.py  alphabet.py  sphere.py
Src/Python/tp_ci_sed/test/: sphere_test.py  sphere_test_main.py
Src/python/: .gitignore  CI.md  setup.cfg  setup.py  sphere  tox.ini
Src/python/abc_and_sphere/: alphabet.py  sphere.py
Src/python/abc_and_sphere/test/: sphere_test.py
Src/python/tp_ci_sed/: alphabet.py  sphere.py
