enable_testing()
find_library(cppunit cppunit)
include_directories(${CMAKE_SOURCE_DIR})
link_directories(${CMAKE_BUILD_DIR})
add_executable(tptest testMain.cpp TestTP.cpp)
target_link_libraries(tptest cppunit tpsed)
add_test(TestVolume tptest TestTP::testVolume)
add_test(TestIsVowel tptest TestTP::testIsVowel)
add_test(TestCountVowels tptest TestTP::testCountVowels)
add_test(TestCountConsonants tptest TestTP::testCountConsonants)

if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
  include(CodeCoverage)
  find_package(PythonInterp)
  setup_target_for_coverage_cobertura(TestVolumeCoverage tptest coverage TestTP::testVolume)
endif()
